Fix spacing of css page

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -13,8 +13,8 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 /* base styles */
 html {
   font-family: 'Raleway', 'Hoefler Text', Georgia, 'Times New Roman', sans-serif;
-  font-size: 20px; /* 20/16=1.25*/
-  line-height: 25px; /*25/20=1.25*/
+  font-size: 1.25em; /* 20/16=1.25*/
+  line-height: 1.25em; /*25/20=1.25*/
   background: #222;
   color: #D3D3D3;
   padding: 25px;
